style height fixed

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,10 @@
   to { transform: rotate(360deg); }
 }
 
+#components-layout-demo-custom-trigger {
+  height: 100%;
+}
+
 #components-layout-demo-custom-trigger .trigger {
   font-size: 18px;
   line-height: 64px;
