--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
 @import '~antd/dist/antd.css';
 
+html,body{
+  height: 100%;
+}
+
+#root{
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
